2003-01-21  Philip Blundell  <philb@gnu.org>

	* sysdeps/unix/sysv/linux/bits/ioctls.h (SIOCSIFNAME): Define.

2003-01-27  Steven Munroe  <sjmunroe@us.ibm.com>

	* stdio-common/Makefile: Add bug14-ENV to set LOCPATH for make check.

2003-01-27  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/bug14.c: Use official name for the locale.

	* stdio-common/vfprintf.c [USE_IN_LIBIO]: Use _IO_cleanup_region_start
	instead of __libc_cleanup_region_start and _IO_cleanup_region_end
	instead of __libc_cleanup_region_end.

	* sysdeps/unix/sysv/linux/i386/system.c (CLEANUP_HANDLER): Pass 1
	as first parameter to __libc_cleanup_region_start.

	* sysdeps/unix/sysv/linux/powerpc/powerpc64/fe_nomask.c
	(__fe_nomask_env): Use __prctl not prctl.
	* sysdeps/unix/sysv/linux/syscalls.list: Add __prctl alias for
	prctl syscall.

	* elf/dl-reloc.c (CHECK_STATIC_TLS): Improve error message.

	* elf/dl-open.c (_dl_tls_static_size): Bump to 2048.

	* elf/dl-reloc.c (allocate_static_tls): Avoid arithmetic
	wrap-around in test.

2003-01-26  Andreas Schwab  <schwab@suse.de>

	* sysdeps/wordsize-32/divdi3.c: Export the functions only as
	compatibility symbols.  Remove INTDEF for __divdi3.
	* sysdeps/wordsize-32/lldiv.c: Don't use __divdi3_internal.
	* sysdeps/powerpc/powerpc32/divdi3.c: Remove.
	* sysdeps/powerpc/powerpc32/Makefile (CPPFLAGS-divdi3.c): Don't
	define.
	* sysdeps/powerpc/powerpc32/Dist: Remove divdi3.c.

2003-01-24  Jakub Jelinek  <jakub@redhat.com>

	* elf/tls-macros.h: Add SPARC 32-bit definitions.
	* sysdeps/sparc/sparc32/elf/configure.in: Add TLS check.
	* sysdeps/sparc/sparc32/dl-machine.h: Add dl_machine_h guards
	for the first half of the header.  Include tls.h.
	(elf_machine_type_class): Return ELF_RTYPE_CLASS_PLT for TLS
	relocs too.
	(elf_machine_rela): Handle TLS relocs.
	* sysdeps/sparc/dl-tls.h: New file.

	* sysdeps/unix/sysv/linux/sparc/sparc32/socket.S: Add cancellation
	support.

	* sysdeps/sparc/sparc32/sparcv9/hp-timing.h: Use %g6 instead of %g7.